docs: fix vertical spacing of h3s and examples

--- a/packages/dataparcels-docs/src/layouts/index.scss
+++ b/packages/dataparcels-docs/src/layouts/index.scss
@@ -84,8 +84,14 @@
     }
 }
 @include DcmeTypography {
+    h2, h3 {
+        margin-top: 3rem;
+    }
     input {
         background: #FFF;
+    }
+    .Message {
+        margin-bottom: 1.5rem;
     }
 }
 @include DcmeWrapper;
